# AutomationBot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.json
src/contentgenerator_bot/: contentgenerator_general.py
src/instagram_bot/: instagram_uploader.py
src/x_bot/: x_uploader.py  x_video_uploader.py
src/youtube_bot/: youtube_uploader.py
tests/: test_instagram_uploader.py  test_x_uploader.py  test_youtube_uploader.py
